--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
  {
-  "homepage": "https://christiandc19.github.io/new_wave_recovery/",
+  "homepage": "https://www.newwaverecovery.net/",
   "name": "new_wave_recovery",
   "version": "0.1.0",
   "private": true,
